<resources>
    <string name="app_name">Calm down!</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8505706241717212/1197147397</string>
    <string name="description_app">"Calm down! — is a simple program that helps to relax in a difficult time and helps to have a good time.   If you have any questions or comments, please contact us: Email: hardsea17@gmail.com "</string>
    <string name="cry_text">Sorry, if our ad you get bored. But we want eat. We beginners developers and we want progress. But for this we need money. And when you close one ad, in the world cry one hungry developer. \nDon`t do this, please :(\n\nIf you have any questions or comments, please contact us:\nEmail: hardsea17@gmail.com\n</string>
    <string name="menu_text_resume">Resume</string>
    <string name="menu_text_setstyle">Set Style</string>
    <string name="menu_text_about">About</string>
    <string name="menu_text_information">Information</string>
    <string name="menu_text_rateus">Rate us</string>
    <string name="menu_text_reset">Reset</string>
    <string name="aboutus_text">All time clicked —</string>
    <string name="thanks_ad_text">Thanks for watching ad!</string>
    <string name="menu">Menu</string>
    <string name="style">Style</string>
    <string name="information">Information</string>
    <string name="score" translatable="false">0</string>
    <string name="info_text_1">Clicked:</string>
    <string name="info_text_2">Selected color:</string>
    <string name="info_text_3">Selected image:</string>
    <string name="info_text_4">Selected size of image:</string>
    <string name="info_text_5">Selected vibration:</string>
    <string name="info_text_6">All time in app:</string>
    <string name="style_dialog_text_1">Click to set:</string>
    <string name="style_dialog_text_2">Set Color:</string>
    <string name="style_dialog_text_3">Size</string>
    <string name="style_dialog_text_4">Duration of vibrate:</string>
	<string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>

	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
